Implementaçãoes para Espaço e Reserva